--- a/assignments/5 - bookly/index.html
+++ b/assignments/5 - bookly/index.html
@@ -18,14 +18,16 @@
 	    </header>
 	    <div id="book-list">
 	    	<h2 class="title">Books to Read</h2>
-	    	<ul>
+	    	<ul class="ul">
+
+				
 	    	</ul>
 	    </div>
 	    <form id="add-book">
         <input type="checkbox" id="hide" />
         <label for="hide">Hide all books</label>
-	    	<input type="text" placeholder="Add a book..." />
-	    	<button>Add</button>
+	    	<input class="input" type="text" placeholder="Add a book..." />
+	    	<button type="submit" class="btn">Add</button>
 	    </form>
 		</div>
     <script src="app.js"></script>		
