--- a/assignments/5 - bookly/index.html
+++ b/assignments/5 - bookly/index.html
@@ -5,22 +5,20 @@
     <link href="style.css" rel="stylesheet" />
     <title>Bookly App</title>
   </head>
-  <body>
+  <body onload="newBook(library)">
   	<div id="wrapper">
 	    <header>
 	    	<div id="page-banner">
 	    		<h1 class="title">Bookly</h1>
-          <p>Best Books For Hackers</p>
-          <form id="search-books">
-            <input type="text" placeholder="Search books..." />
-          </form>
+          		<p>Best Books For Hackers</p>
+          		<form id="search-books">
+            		<input type="text" placeholder="Search books..." />
+          		</form>
 	    	</div>
 	    </header>
 	    <div id="book-list">
 	    	<h2 class="title">Books to Read</h2>
 	    	<ul class="ul">
-
-				
 	    	</ul>
 	    </div>
 	    <form id="add-book">
