--- a/assignments/5 - bookly/index.html
+++ b/assignments/5 - bookly/index.html
@@ -12,7 +12,7 @@
 	    		<h1 class="title">Bookly</h1>
           		<p>Best Books For Hackers</p>
           		<form id="search-books">
-            		<input type="text" placeholder="Search books..." />
+            		<input class="book_search" type="text" placeholder="Search books..." />
           		</form>
 	    	</div>
 	    </header>
